# driver-doctor

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-24-disk-health-diagnostic.md
src/: ai.rs  ai_context.rs  app.rs  config.rs  icons.rs  main.rs  scan.rs  shell_icons.rs  structure.rs
src/assets/: app_icon_256.rgba  health_check_icon_32.rgba
